fix for backup tool layout issue
git-svn-id: svn://svn.code.sf.net/p/opendb/code/opendb/trunk@350 2c52d18a-8f90-4aa0-bf14-52c5ce5e299b

--- a/theme/default/admin.css
+++ b/theme/default/admin.css
@@ -15,7 +15,14 @@ ul.itemTypeGroupList li.active
 .tooltip dt { font-weight: bold; }
 .tooltip-caption { background: black; color: rgb(255, 238, 170); }
 .tooltip h2 { white-space: normal; }
-	
+
+ul.checkboxGridOptionsVertical li
+{
+       /* prevent text on the Backup Database
+       page from being cut off on smaller screens */
+       width: 350px;
+}
+
 div.tabContainer
 {
 	padding-top: 10px;
